--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ecom",
+  "homepage": "https://teasus.github.io/Rashid-Store-Ecom-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.3",
+    "gh-pages": "^4.0.0",
     "mdbootstrap": "^4.20.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
@@ -20,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
